# open-belex-libs

./: .gitignore  .project-root  LICENSE.txt  MANIFEST.in  README.md  bitbucket-pipelines.yml  environment.yml  setup.cfg
src/open_belex_libs/: __init__.py  arithmetic.py  bitwise.py  common.py  constants.py  game_of_life.py  hdc.py  memory.py  tartan.py
