[metadata]
name = open-belex-libs
version = 1.0.1
author =
    Brian Beckman
    Dylon Edwards
author_email =
    bbeckman@gsitechnology.com
    dthomas@gsitechnology.com
description = APL compiler suite for the APU (library)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/gsitech/open-belex-libs
project_urls =
    Bug Tracker = https://bitbucket.org/gsitech/open-belex-libs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    open-belex>=1.0.0,<2.0.0

[options.packages.find]
where = src
